fix font flicker

--- a/src/app.css
+++ b/src/app.css
@@ -4,7 +4,7 @@
   src: url("$lib/fonts/PaperMono-Regular.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
-  font-display: swap;
+  font-display: block;
 }
 
 /* Sans (Variable Font) */
@@ -13,7 +13,7 @@
   src: url("$lib/fonts/CalSansUI[MODE,wght].woff2") format("woff2");
   font-weight: 300 700;
   font-style: normal;
-  font-display: swap;
+  font-display: block;
 }
 
 /* Heading */
@@ -22,7 +22,7 @@
   src: url("$lib/fonts/CalSans-SemiBold.woff2") format("woff2");
   font-weight: 600;
   font-style: normal;
-  font-display: swap;
+  font-display: block;
 }
 
 :root {
